# 3d-game-wip

./: CMakeLists.txt  README.md
models/: enemy1.vox  enemy1_0.vox  first_island.vox  heart.vox  player.vox  player_0.vox  player_1.vox  robot.vox  star.vox  test.vox
models/boss/: 0.vox  1.vox  2.vox  death_0.vox  death_1.vox  death_2.vox  death_3.vox  death_4.vox  death_5.vox  death_6.vox  death_7.vox
models/enemy1/: 1.vox  death0.vox  death1.vox  death2.vox  death3.vox  death4.vox
models/enemy2/: -1.vox  -2.vox  0.vox  1.vox  2.vox  death0.vox  death1.vox  death2.vox  death3.vox
models/enemy3/: 0.vox  1.vox  2.vox  3.vox  4.vox  death0.vox  death1.vox  death2.vox  death3.vox  death4.vox
models/islands/: 0.vox  1.vox  2.vox  3.vox  4.vox  5.vox  6.vox  7.vox  first_island.vox
models/player/: death0.vox  death1.vox  death2.vox  death3.vox  death4.vox
shaders/: Skybox.vert  Sprite.frag  Trail.frag  Trail.vert  Voxel.frag  Voxel.vert
src/: VoxelLoader.cpp  VoxelLoader.h  VoxelModel.cpp  VoxelModel.h  VoxelRenderer.cpp  VoxelRenderer.h  audioPlayer.h  boss.cpp  boss.h  camera.cpp  camera.h  character.cpp  character.h  enemy.cpp  enemy.h  enemy1.cpp  enemy1.h  enemy2.cpp  enemy2.h  enemy3.cpp  enemy3.h  game.cpp  game.h  gameObject.h  hud.cpp  hud.h  level.cpp  level.h  levelRenderer.cpp  levelRenderer.h  main.cpp  player.cpp  player.h  resource_manager.cpp  resource_manager.h  skybox.cpp  skybox.h  spriteRenderer.cpp  spriteRenderer.h  trailGenerator.cpp  (+1 more)
textures/: ground.kra  ground.kra~
